--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -80,7 +80,7 @@
 
   .hero__title {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 30px;
     color: #000;
     text-align: center;
@@ -132,7 +132,7 @@
     margin-left: 30px;
 }
   .hero__title {
-    font-size: 5.5vw;
+    font-size: 5.2vw;
     max-width: 835px
 }
 .hero__desc {
